define the background colour of the clicklabel to assure it is always readable. Bug [ 1704699 ]

--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+  * fix background color of clicklabels
+    Bug [ 1704699 ]
   * remove missleading tooltips 
     Bug [ 1704700 ]
   * fix segfault
