--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+  * move used-keys-button form options to NewX509 dialog
+  * Set string options in options dialog
   * remove extension and attribute tab in details dialog if
     no extensions or attributes available
   * documentation updated
