--- a/AUTHORS
+++ b/AUTHORS
@@ -9,3 +9,6 @@ Ilya Kozhevnikov <ilya@ef.unn.ru>
 
 Wolfgang Glas <wolfgang.glas@ev-i.at>
 	Adding SPKAC support and testing
+
+Geoff Beier <geoffbeier@gmail.com>
+	MAC OS X Support and testing
