change the hashing of the default password.
 - This means that any database opened by this version can't
   be used  properly by older versions
 - Opening older databases immediately rehashes the password
   an makes it unusable for older XCA versions.
 - Opening newer databases with old XCA versions won't hurt,
   it just does not work properly

--- a/changelog
+++ b/changelog
@@ -1,4 +1,6 @@
 
+  * change the hashing for the default password.
+    this makes it incompatible to older versions
   * Major changes for MAC OS X
   * extend template format for nconf settings
   * add nconf input field for arbitrary OpenSSL extensions
