fix date settings in Certificate renewal dialog  - lib/func.cpp just indentation  - set the default to 1 year and apply it.

--- a/changelog
+++ b/changelog
@@ -1,4 +1,6 @@
 
+
+  * fix date settings in Certificate renewal dialog
   * change the hashing for the default password.
     this makes it incompatible to older versions
   * Major changes for MAC OS X
