--- a/changelog
+++ b/changelog
@@ -1,5 +1,7 @@
 xca 0.8.0
 
+  * Implement feature request [2213094] and [1108304]
+    "Generate Template from certificate"
   * add hash algos "ripemd160" and "SHA384"
   * add the "no well-defined date" from RFC 5280 as checkbox
   * Feature request [1996192]
