--- a/doc/xca.1
+++ b/doc/xca.1
@@ -63,7 +63,7 @@ Usually after importing the items in
 .I -k -r -c -p -7 -l -t
 the application will startup as usual. With the
 .I -x
-option given it will exit after finishing the import dialog. This is usefull if xca is used as default application for viewing certificates, keys or requests.
+option given it will exit after finishing the import dialog. This is useful if xca is used as default application for viewing certificates, keys or requests.
 
 .SH SEE ALSO
 A more detailed HTML documentation can be found in the doc directory, in the "Help" menu of the application or on http://xca.sf.net
