improve key-value tables
for "additional DN entries" and "SAN/CDP/AIA edit-boxes":
 - make type-selection a combobox
 - make rows reorderable

--- a/changelog
+++ b/changelog
@@ -1,4 +1,5 @@
 
+  * improve key-value table input for "additional DN entries"
   * PIN and PUK changing implemented
   * apply partial template-contents
     - applying the subject only or the extensions only is possible now
