improve PIN changing dialogs
 - use token.label to identify the slot
 - show min and max PIN lengths when changing USER and SO PIN

 - sanitize token strings like label
 - pad token strings correctly with ' ' 0x20
 - reenable "Init Security token"

--- a/changelog
+++ b/changelog
@@ -1,4 +1,5 @@
 
+  * improve token handling and PIN changing dialogs
   * improve key-value table input for "additional DN entries"
   * PIN and PUK changing implemented
   * apply partial template-contents
