--- a/changelog
+++ b/changelog
@@ -1,4 +1,5 @@
 
+  * add DH param generation menu entry
   * improve token handling and PIN changing dialogs
   * improve key-value table input for "additional DN entries"
   * PIN and PUK changing implemented
