--- a/doc/xca.1
+++ b/doc/xca.1
@@ -1,9 +1,27 @@
 .TH XCA 1
 .SH NAME
-xca \- A GUI for handling X509 certificates, RSA keys, PKCS#10 Requests and CRLs.
+xca \- X Certificate and key management
+.br
+A GUI for handling X509 certificates, RSA/DSA/EC keys, PKCS#10 Requests and CRLs in Software and on Smart cards.
 .SH SYNOPSIS
 .B xca
 .RI [ -v ]
+.RI [ -d ]
+.RI [ -x ]
+.br
+.SH "DESCRIPTION"
+This application is intended as CA, certificate- and Key store. It uses a single file to store the items.
+Supported are Certificate signing requests (PKCS#10), Certificates (X509v3), RSA, DSA and EC keys and Certificate revokation lists.
+The signing of requests, and the creation of selfsigned certificates
+is supported. Both can use templates for simplicity.
+The PKI structures can be imported and exported in several formats
+like PKCS#12, PEM, DER, PKCS#8, PKCS#7.
+.br
+XCA enables users to manage smart cards via the PKCS#11 interface
+
+.SH OPTIONS
+A summary of options are included below.
+There are some deprecated legacy options:
 .RI [ -k ]
 .RI [ -r ]
 .RI [ -c ]
@@ -11,56 +29,19 @@ xca \- A GUI for handling X509 certificates, RSA keys, PKCS#10 Requests and CRLs
 .RI [ -7 ]
 .RI [ -l ]
 .RI [ -t ]
-.RI [ -d ]
-.RI [ -b ]
-.RI [ -x ]
+.RI [ -P ]
 .br
-.SH "DESCRIPTION"
-This application is intended as CA, certificate- and Key store. It uses a Berkeley db for storage to have everything in one file.
-Supported are Certificate signing requests (PKCS#10), Certificates (X509v3), RSA keys and Certificate revokation lists.
-The signing of requests, and the creation of selfsigned certificates
-is supported. Both can use templates for simplicity.
-The PKI structures can be imported and exported in several formats
-like PKCS#12, PEM, DER, PKCS#8, PKCS#7.
-
-.SH OPTIONS
-A summary of options are included below.
+Before XCA 0.9.0, the type of the items had to be given. This was removed since. Just put all keys, certs, requests and the database unsorted on the commandline. For backwards compatibility those options are ignored when found.
 .TP
 .B \-v
 Show version information and exit.
 .TP
-.B \-r
-expect all following non-option arguments to be Certificate signing requests
-or SPKAC requests.
-.TP
-.B \-k
-expect all following non-option arguments to be RSA keys.
-.TP
-.B \-c
-expect all following non-option arguments to be Certificates.
-.TP
-.B \-p
-expect all following non-option arguments to be PKCS#12 files.
-.TP
-.B \-7
-expect all following non-option arguments to be PKCS#7 files.
-.TP
-.B \-l
-expect all following non-option arguments to be Revocation lists.
-.TP
-.B \-t
-expect all following non-option arguments to be XCA templates.
-.TP
 .B \-d
-expect the following argument to be the database name to use.
-.TP
-.B \-b
-expect the following argument to be the basedirectory for the database(s) OIDs and database logs.
+expect the following argument to be a new database to use.
 .TP
 .B \-x
 Exit after processing all commandline options.
-Usually after importing the items in
-.I -k -r -c -p -7 -l -t
+Usually after importing the items from commandline
 the application will startup as usual. With the
 .I -x
 option given it will exit after finishing the import dialog. This is useful if xca is used as default application for viewing certificates, keys or requests.
