--- a/changelog
+++ b/changelog
@@ -1,4 +1,5 @@
 
+  * russian translation by Pavel Belly
   * support loading DER formatted PKCS#8 keys
   * ease commandline use
   * add DH param generation menu entry
