improve date and time input
- Only once set notBefore to "now" when creating Cert-renewal
  or NewCert dialog.

- Apply-time button now always uses the current value from notBefore
  and adds the time-span without resetting notBefore

- Checking "midnight" now immediately modifies the dates.
  Unchecking "midnight" now recovers the old value

- The seconds are always set to 00, since they can't be set via
  the DateTime dialog anyway

- CRL generation now too allows to use midnight and time ranges
  and uses GENERALIZED time if the date is out of range for UTCTIME
  (same logic as for certificates)

--- a/changelog
+++ b/changelog
@@ -1,4 +1,6 @@
 
+  * improve date handling. "notBefore" is not reset to now anymore
+    when applyiong a time range
   * Support dropping files onto the application
   * russian translation by Pavel Belly
   * support loading DER formatted PKCS#8 keys
