--- a/changelog
+++ b/changelog
@@ -2,6 +2,7 @@
   * improve creating templates from cert
     - enhance parsing of CRL-DP, SAN, IAN and AuthInfoAcc
     - add support for CertificatePolicies
+    - unknown extension are written as generic DER
   * improve date handling. "notBefore" is not reset to now anymore
     when applyiong a time range
   * Support dropping files onto the application
