Improve CRL generation [3035294]
Add CRLNumber for the CRL.
Add InvalidityDate and CRL-reason for each entry.

CRL-hold-instruction-code not supported, yet.

--- a/changelog
+++ b/changelog
@@ -1,4 +1,5 @@
 
+  * Improve CRL generation [3035294] CRLNumber, CRLReason
   * improve creating templates from cert
     - enhance parsing of CRL-DP, SAN, IAN and AuthInfoAcc
     - add support for CertificatePolicies
