--- a/changelog
+++ b/changelog
@@ -1,4 +1,7 @@
 
+  * Add de/selection of columns and add a lot of new possible columns
+    All Subject entries, the subject hash and whole name,
+    Certificate fingerprints, dates, CA info, CRL number
   * Improve CRL generation [3035294] CRLNumber, CRLReason
   * improve creating templates from cert
     - enhance parsing of CRL-DP, SAN, IAN and AuthInfoAcc
